# qt3drendrer

./: CMakeLists.txt  README.md  app.qrc
inc/: BaseModel.h  ModelView.h  ModelViewTabs.h  Models.h  ModelsDialog.h  ObjLoader.h  ObjModel.h  Plane.h  Polygon.h  TransformMatrix.h  Triangle.h  Vec3.h  mainwindow.h  modelview.h
src/: BaseModel.cpp  ModelView.cpp  ModelViewTabs.cpp  Models.cpp  ModelsDialog.cpp  ObjLoader.cpp  ObjModel.cpp  Plane.cpp  Polygon.cpp  Triangle.cpp  Vec3.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  modelsdialog.ui  modelview.cpp  modelview.ui  modelviewtabs.ui
